Add more collection handlers (#132)